feat: Add MovieUriNav to handle API requests
  - MovieUriNav builds URI references specific to MovieDB API in a
    convinient way

--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".MovieDetailsActivity">
 
+    <!-- TODO: Modify the appearance to be in a more presentable way -->
     <ImageView
         android:id="@+id/img_movie_detail"
         android:layout_width="match_parent"
