--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@+id/menu_sort_popular"
-    android:title="@string/menu_popularity"/>
-    <item android:id="@+id/menu_sort_rating"
-    android:title="@string/menu_rating"/>
+    <item
+        android:id="@+id/menu_sort_popular"
+        android:title="@string/menu_popularity" />
+    <item
+        android:id="@+id/menu_sort_rating"
+        android:title="@string/menu_rating" />
+    <item
+        android:id="@+id/menu_sort_now_playing"
+        android:title="@string/now_playing" />
+    <item
+        android:id="@+id/menu_sort_upcoming"
+        android:title="@string/latest" />
 </menu>
