--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="rating_a">#96C9F3</color>
+    <color name="rating_b">#8BC6F4</color>
+    <color name="rating_c">#68B2EC</color>
+    <color name="rating_d">#1B85DA</color>
+    <color name="rating_e">#612CC1</color>
+
 </resources>
