--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -15,6 +15,11 @@
         android:src="@drawable/ic_launcher_foreground"
         android:contentDescription="@string/cd_movie_poster" />
 
+    <androidx.viewpager.widget.ViewPager
+        android:layout_width="wrap_content"
+        android:background="@color/colorAccent"
+        android:layout_height="50dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
