--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_sort_popular"
         android:title="@string/menu_popularity" />
@@ -12,4 +13,8 @@
     <item
         android:id="@+id/menu_sort_upcoming"
         android:title="@string/latest" />
+    <item app:showAsAction="always"
+        android:id="@+id/main_menu_fav"
+        android:title="@string/main_menu_fav"
+        android:icon="@drawable/ic_baseline_favorite_24"/>
 </menu>
