--- a/app/src/main/res/layout/activity_favorites_rv_item.xml
+++ b/app/src/main/res/layout/activity_favorites_rv_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/fav_rv_item_title"
@@ -24,10 +24,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="visible"
-        app:constraint_referenced_ids="fav_rv_item_date, fav_rv_item_synopsis, imageView" />
+        app:constraint_referenced_ids="fav_rv_item_date, fav_rv_item_synopsis, fav_rv_item_image" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/fav_rv_item_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
@@ -45,7 +45,7 @@
         android:paddingRight="14dp"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/fav_rv_item_image"
         tools:text="24/16/2020" />
 
     <TextView
