--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -8,7 +8,7 @@
     tools:context=".activities.DetailsActivity">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_fav_movie_details"
+        android:id="@+id/btn_make_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_fav_movie_details"
+        app:layout_constraintBottom_toTopOf="@+id/btn_make_favorite"
         app:layout_constraintEnd_toEndOf="@+id/tl_movie_details"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tl_movie_details"
