UI update for trailer and review layouts

--- a/app/src/main/res/layout/fragment_trailers_rv_item.xml
+++ b/app/src/main/res/layout/fragment_trailers_rv_item.xml
@@ -8,30 +8,39 @@
 
     <TextView
         android:id="@+id/trailer_et_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/trailer_btn_share"
+        android:layout_width="296dp"
+        android:layout_height="52dp"
+        android:gravity="center_vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Trailer Name" />
 
     <ImageButton
-        android:background="#0000"
         android:id="@+id/trailer_btn_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_baseline_play_arrow_24"
+        android:background="#0000"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/trailer_et_name"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_play_arrow_24" />
 
     <ImageButton
         android:id="@+id/trailer_btn_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginLeft="6dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:background="#0000"
-        app:layout_constraintBottom_toBottomOf="@+id/trailer_btn_link"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/trailer_btn_link"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/trailer_et_name"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_share_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
