--- a/app/src/main/res/layout/fragment_reviews_rv_item.xml
+++ b/app/src/main/res/layout/fragment_reviews_rv_item.xml
@@ -4,16 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="@dimen/padding_normal">
 
     <TextView
         android:id="@+id/reviews_tv_reviewer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Reviewer"
+        tools:text="Reviewer"
+        app:fontFamily="sans-serif-condensed"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
-        android:text="Review"
+        tools:text="Review"
         app:layout_constraintStart_toStartOf="@+id/reviews_tv_reviewer"
         app:layout_constraintTop_toBottomOf="@+id/reviews_tv_reviewer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
