--- a/app/src/main/res/layout/activity_movie_rv_item.xml
+++ b/app/src/main/res/layout/activity_movie_rv_item.xml
@@ -13,7 +13,8 @@
         android:scaleType="centerCrop"
         android:layout_width="@dimen/img_movie_width"
         android:layout_height="@dimen/img_movie_height"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_launcher"
+        android:contentDescription="@string/desc_img_movie_poster" />
 
     <TextView
         android:id="@+id/tv_item_title"
